@@ -2,6 +2,12 @@
             <tal:block tal:define="item options/item;
                                    varConf item/varConf"
                        i18n:domain="ftw.shop">
+
+                       <a tal:condition="item/hasImage" tal:attributes="href item/url" style="border: none;">
+                           <img  src="#" tal:attributes="src string:${item/url}/image_thumb" />
+                       </a>
+
+
                 <div class="variation-toplevel-group" tal:repeat="varValue1 varConf/getVariation1Values"
                     tal:condition="python:len(varConf.getVariationAttributes()) > 1">
                 <h2 tal:content="varValue1">Red</h2>
